test/pass/array1.min
program
    array x[1] := 6
start
end
