test/fail/chardim.min
program
    array x['\2'] := 1, 2
start
end
